Add npm install

--- a/mocha-chai/Makefile
+++ b/mocha-chai/Makefile
@@ -5,6 +5,7 @@ init-testing:
 	git submodule add https://github.com/visionmedia/mocha.git spec/vendor/mocha
 	git submodule add https://github.com/chaijs/chai.git spec/vendor/chai
 	git submodule init
+	npm install
 
 update-testing:
 	git submodule update
