--- a/mocha-node-should/package.json
+++ b/mocha-node-should/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"test": "grunt test"
+		"test": "make test"
 	},
 	"devDependencies": {
 		"grunt": "~0.3",
