--- a/mocha-express-chai/package.json
+++ b/mocha-express-chai/package.json
@@ -4,7 +4,10 @@
     "private": true,
     "scripts": {
         "start": "node app.js",
-        "test": "node_modules/.bin/grunt test"
+        "test": "node_modules/.bin/mocha",
+        "blanket": {
+            "pattern": "/app/"
+        }
     },
     "author": "TODO",
     "main": "./app.js",
@@ -12,7 +15,8 @@
         "node":  ">=0.8.x"
     },
     "dependencies": {
-        "express": "3.x"
+        "express": "3.x",
+        "jade": "*"
     },
     "devDependencies": {
         "grunt": "*",
@@ -20,6 +24,7 @@
         "chai": "*",
         "mocha": "*",
         "zombie": "*",
-        "chai-supertest": "*"
+        "chai-supertest": "*",
+        "blanket": ">= 1.0.3"
     }
 }
