Added example of Phantom usage

--- a/mocha-express-chai/package.json
+++ b/mocha-express-chai/package.json
@@ -24,6 +24,7 @@
         "chai": "*",
         "mocha": "*",
         "zombie": "*",
+        "phantom": "*",
         "chai-supertest": "*",
         "blanket": ">= 1.0.3"
     }
