Coverage task for grunt

--- a/mocha-express-chai/package.json
+++ b/mocha-express-chai/package.json
@@ -21,6 +21,7 @@
     "devDependencies": {
         "grunt": "*",
         "grunt-mocha-test": "*",
+        "grunt-exec": "*",
         "chai": "*",
         "mocha": "*",
         "zombie": "*",
